Remove no longer needed gradle code